# iris

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  REACT_MIGRATION.md  README.md  build-react.sh  conftest.py  cypress.config.js  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  vite.config.js
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml  pythonpackage.yml  security.yml
cypress/: README.md
cypress/e2e/: preferences-segmentation-ai.cy.js
cypress/support/: commands.js  e2e.js
environment_scripts/: verify_installation.py
iris/: __init__.py  cli.py
iris-react/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
iris-react/src/: App.tsx  index.css  main.tsx
iris-react/src/api/: base.ts  client.ts  segmentation.ts  types.ts
iris-react/src/components/: CanvasView.tsx  CanvasWorkspace.tsx  MaskOverlay.tsx  MetadataView.tsx  ViewGrid.tsx
iris-react/src/context/: UIContext.tsx
iris-react/src/hooks/: useWindowSize.ts
iris-react/src/pages/: SegmentationPage.tsx
iris-react/src/styles/: segmentation.css
iris/admin/: __init__.py  api.py  legacy.py  spa.py
iris/admin/templates/admin/: react-app.html
iris/main/: __init__.py
iris/main/templates/: base.html
iris/segmentation/: __init__.py  api.py  spa.py
iris/segmentation/templates/: segmentation.html
iris/segmentation/templates/segmentation/: react-app.html
iris/tests/: conftest.py  hide_test_demo.py  test_admin_pages.py  test_cli_args.py  test_cli_launch_rm.py  test_help_cli.py  test_models_user.py  test_preferences.py  test_privilege_escalation_fix.py  test_project_metadata.py  test_project_render.py  test_project_seeding.py  test_project_utils.py  test_segmentation_masks.py  test_segmentation_spa.py  test_segmentation_utils.py  test_user_decorators.py  test_utils.py  test_utils_view.py
iris/user/: __init__.py
sch/: pydiris.py
src/: admin-app.tsx  segmentation-app.test.tsx  segmentation-app.tsx
src/components/: AdminNavigation.test.tsx  AdminNavigation.tsx  PreferencesModal.tsx
src/components/preferences/: BandSelector.test.tsx  BandSelector.tsx  ProjectConfigTab.tsx  SegmentationAITab.test.tsx  SegmentationAITab.tsx  ViewsTab.test.tsx  ViewsTab.tsx
src/components/preferences/config/: AIModelConfig.tsx  ClassListEditor.tsx  ClassesSection.tsx  FormField.tsx  GeneralSection.tsx  MaskAreaConfig.tsx  PathListEditor.tsx  SegmentationSection.tsx  ViewGroupListEditor.tsx  ViewGroupsSection.tsx  ViewListEditor.tsx  ViewsSection.tsx
src/pages/: ActionsPage.tsx  ImagesPage.tsx  UsersPage.tsx
src/test/: README.md
src/types/: iris.ts
tools/iris-config-ui/: README.md  index.html  package.json  server.js
tools/iris-config-ui/public/: irisconfig.json  uischema.json
tools/iris-config-ui/src/: App.jsx  schema-utils.js  styles.css
