[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris"
description = "Tool for manual image annotation"
authors = [
    {name = "John Mrziglod", email = "mrzo@gmx.de"},
    {name = "Alistair Francis"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask>=2.3.2",
    "flask_compress>=1.13",
    "flask-sqlalchemy>=2.5.1,<4.0",
    "numpy>=1.23.4",
    "pyyaml>=5.4.1",
    "lightgbm>=3.3.3",
    "rasterio>=1.3.3",
    "requests>=2.28.1",
    "scipy>=1.9.3",
    "scikit-image>=0.19.3",
    "scikit-learn>=1.0.0",
    "sqlalchemy>=1.4.4,<2.0",
    "matplotlib>=3.6.2",
    "gevent>=22.8.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-flask>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ESA-PhiLab/iris"
Repository = "https://github.com/ESA-PhiLab/iris"

[project.scripts]
iris = "iris:run_app"

[tool.setuptools.dynamic]
version = {attr = "iris.__version__"}

[tool.setuptools.packages.find]
include = ["iris*"]

[tool.setuptools.package-data]
iris = ["*.json", "*/templates/*", "*/static/*/*"]